--- a/crime_rate.ipynb
+++ b/crime_rate.ipynb
@@ -90,7 +90,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
+      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
       "\n",
       "Registered S3 method overwritten by 'GGally':\n",
       "  method from   \n",
@@ -112,66 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "09f8186c-eb6b-4584-bc7b-add6c7c1157d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mRows: \u001b[22m\u001b[34m11198\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m10\u001b[39m\n",
-      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
-      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
-      "\u001b[31mchr\u001b[39m (3): TYPE, HUNDRED_BLOCK, NEIGHBOURHOOD\n",
-      "\u001b[32mdbl\u001b[39m (7): YEAR, MONTH, DAY, HOUR, MINUTE, X, Y\n",
-      "\n",
-      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
-      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rows: 11,198\n",
-      "Columns: 10\n",
-      "$ type          \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Break and Enter Commercial\", \"Break and Enter Commercia…\n",
-      "$ year          \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2016, 2011, 2006, 2011, 2010, 2012, 2011, 2011, 2006, 20…\n",
-      "$ month         \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 11, 7, 4, 9, 12, 9, 5, 8, 6, 4, 7, 11, 12, 6, 7, 6, 6, 4…\n",
-      "$ day           \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 15, 11, 25, 8, 2, 18, 26, 14, 13, 19, 14, 6, 7, 5, 1, 20…\n",
-      "$ hour          \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 14, 21, 21, 7, 7, 4, 18, 23, 19, 14, 4, 4, 4, 8, 3, 9, 3…\n",
-      "$ minute        \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 30, 0, 54, 0, 54, 33, 0, 30, 0, 0, 10, 57, 26, 11, 12, 5…\n",
-      "$ hundred_block \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"29XX W 31ST AVE\", \"29XX W 31ST AVE\", \"29XX W 33RD AVE\",…\n",
-      "$ neighbourhood \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Dunbar-Southlands\", \"Dunbar-Southlands\", \"Dunbar-Southl…\n",
-      "$ x             \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 487516.2, 487579.6, 487585.3, 487585.3, 487435.5, 487400…\n",
-      "$ y             \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 5454624, 5454614, 5454405, 5454405, 5453876, 5454826, 54…\n"
-     ]
-    }
-   ],
-   "source": [
-    "# load Dunbar Southlands crime rate dataset from database\n",
-    "dunbar_southlands_data <- read_csv(\"crimedata_csv_Dunbar-Southlands_AllYears.csv\", col_names = TRUE)\n",
-    "names(dunbar_southlands_data) <- tolower(names(dunbar_southlands_data))\n",
-    "\n",
-    "#Get rid of any rows with NA\n",
-    "dunbar_southlands_clean <- dunbar_southlands_data |>\n",
-    "           filter_all(all_vars(!is.na(.)))\n",
-    "\n",
-    "glimpse(dunbar_southlands_clean)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f476ea26-a9c4-4b48-b748-f69e74e07ee7",
-   "metadata": {},
-   "source": [
-    "Figure 2.1.1: The initial Dunbar Southlands dataset with the correct column names and after basic cleaning."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "13febabc-5b8d-43f7-97e3-ccc6f8782022",
    "metadata": {},
    "outputs": [
@@ -217,6 +158,7 @@
     "grandview_woodland_clean <- grandview_woodland_data |>\n",
     "           filter_all(all_vars(!is.na(.)))\n",
     "\n",
+    "# View the cleaned dataframe.\n",
     "glimpse(grandview_woodland_clean)"
    ]
   },
@@ -225,12 +167,12 @@
    "id": "696f5905-199a-4a71-852f-3c49a166bb32",
    "metadata": {},
    "source": [
-    "Figure 2.1.2: The initial Grandview Woodland dataset with the correct column names and after basic cleaning."
+    "Figure 2.1.1: The initial Grandview Woodland dataset with the correct column names and after basic cleaning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "f53d9f88-134b-4836-9239-ea65427b0ae9",
    "metadata": {},
    "outputs": [
@@ -276,6 +218,7 @@
     "shaughnessy_clean <- shaughnessy_data |>\n",
     "           filter_all(all_vars(!is.na(.)))\n",
     "\n",
+    "# View the cleaned dataframe.\n",
     "glimpse(shaughnessy_clean)"
    ]
   },
@@ -284,13 +227,184 @@
    "id": "9307e915-7676-4518-9ca3-0dfcc2cc56bb",
    "metadata": {},
    "source": [
-    "Figure 2.1.3: The initial Shaughnessy dataset with the correct column names and after basic cleaning."
+    "Figure 2.1.2: The initial Shaughnessy dataset with the correct column names and after basic cleaning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d896a75-24f8-4b3c-b8bd-b9a5a56c6440",
+   "metadata": {},
+   "source": [
+    "To narrow down the focus of this study, 2012 to 2016 is chosen inclusive as the target years. Therefore, the two datas are filtered to contain only these five years of data in below. In addition, because we only need type of crime and year, only these two columns are chosen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "792db9ad-7607-4884-87c6-9c5fdbedbea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 10,900\n",
+      "Columns: 2\n",
+      "$ type \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Break and Enter Commercial\", \"Break and Enter Commercial\", \"Brea…\n",
+      "$ year \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2015, 2015, 2015, 2016, 2016, 2016, 2015, 2015, 2016, 2012, 2016,…\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select only the desired years (2012-2016) and the desired columns (type of crime and year)\n",
+    "grandview_woodland_clean <- grandview_woodland_clean |>\n",
+    "    filter(year == 2012 | year == 2013 | year == 2014 | year == 2015 | year == 2016) |>\n",
+    "    select(type, year)\n",
+    "\n",
+    "# View the filtered and selected dataframe.\n",
+    "glimpse(grandview_woodland_clean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4833f57-eaf5-4edf-aba3-63df4c19bd54",
+   "metadata": {},
+   "source": [
+    "Figure 2.1.3: The complete Grandview Woodland dataset with the correct column filtered and selected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1ffd2f1b-b882-48d4-9f37-c700fd7cd3f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 2,093\n",
+      "Columns: 2\n",
+      "$ type \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Break and Enter Commercial\", \"Break and Enter Commercial\", \"Brea…\n",
+      "$ year \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2014, 2016, 2013, 2013, 2014, 2014, 2012, 2013, 2015, 2015, 2014,…\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select only the desired years (2012-2016) and the desired columns (type of crime and year)\n",
+    "shaughnessy_clean <- shaughnessy_clean |>\n",
+    "    filter(year == 2012 | year == 2013 | year == 2014 | year == 2015 | year == 2016) |>\n",
+    "    select(type, year)\n",
+    "\n",
+    "# View the filtered and selected dataframe.\n",
+    "glimpse(shaughnessy_clean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a02a3fd1-427a-47cc-ae51-d1ccbcd9516c",
+   "metadata": {},
+   "source": [
+    "Figure 2.1.4: The complete Shaughnessy dataset with the correct column filtered and selected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c2258b0-12ba-4578-9046-e290762e614a",
+   "metadata": {},
+   "source": [
+    "From the two cleaned datasets, we obtained that Grandview Woodland has a total of 10,900 crimes in the year of 2012 to 2016 while Shaughnessy has a total of 2,093 crimes in the year of 2012 to 2016. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e076b72f-4fe8-4ca2-9a29-5b6d87a5a856",
+   "id": "f0b7066f-77bc-4ad5-93d7-5bb5c984197a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bd3b8f2-8230-4c58-873a-0230971d4354",
+   "metadata": {},
+   "source": [
+    "# DATA WRANGLING FOR OURSELF:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "98f94e64-56b5-46d6-9050-81874833bb40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.030025706940874"
+      ],
+      "text/latex": [
+       "0.030025706940874"
+      ],
+      "text/markdown": [
+       "0.030025706940874"
+      ],
+      "text/plain": [
+       "[1] 0.03002571"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.0680901542111507"
+      ],
+      "text/latex": [
+       "0.0680901542111507"
+      ],
+      "text/markdown": [
+       "0.0680901542111507"
+      ],
+      "text/plain": [
+       "[1] 0.06809015"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "g <- grandview_woodland_clean |>\n",
+    "    filter(type == \"Break and Enter Residential/Other\") |>\n",
+    "    summarize(n=n()) |>\n",
+    "    mutate(z = n/29175) |>\n",
+    "    pull(z)\n",
+    "\n",
+    "g\n",
+    "\n",
+    "s <- shaughnessy_clean |>\n",
+    "    filter(type == \"Break and Enter Residential/Other\") |>\n",
+    "    summarize(n=n()) |>\n",
+    "    mutate(z = n/8430) |>\n",
+    "    pull(z)\n",
+    "\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8394296c-ba3f-4f55-91d8-5bd76d05d444",
+   "metadata": {},
+   "source": [
+    "#### 2.2: Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f911a746-ace4-4c97-8034-b7d8d45bbacf",
    "metadata": {},
    "outputs": [],
    "source": []
