Selected desired crime type and spiltted datasets uo

--- a/crime_rate.ipynb
+++ b/crime_rate.ipynb
@@ -90,7 +90,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
       "\n",
       "Registered S3 method overwritten by 'GGally':\n",
       "  method from   \n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "13febabc-5b8d-43f7-97e3-ccc6f8782022",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "f53d9f88-134b-4836-9239-ea65427b0ae9",
    "metadata": {},
    "outputs": [
@@ -235,12 +235,12 @@
    "id": "6d896a75-24f8-4b3c-b8bd-b9a5a56c6440",
    "metadata": {},
    "source": [
-    "To narrow down the focus of this study, 2012 to 2016 is chosen inclusive as the target years. Therefore, the two datas are filtered to contain only these five years of data in below. In addition, because we only need type of crime and year, only these two columns are chosen."
+    "To narrow down the focus of this study, 2012 to 2016 is chosen inclusive as the target years. Therefore, the two datas are filtered to contain only these five years of data in below. In addition, we want to focus primarily on the \"Break and Enter Residential/Other\" and \"Offence against a person\", so we filtered data further and selected only the year and type column. The two datas are then splitted into two sub datasets, one for each of the crime types."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "792db9ad-7607-4884-87c6-9c5fdbedbea3",
    "metadata": {},
    "outputs": [
@@ -248,21 +248,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows: 10,900\n",
+      "Rows: 876\n",
       "Columns: 2\n",
-      "$ type \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Break and Enter Commercial\", \"Break and Enter Commercial\", \"Brea…\n",
-      "$ year \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2015, 2015, 2015, 2016, 2016, 2016, 2015, 2015, 2016, 2012, 2016,…\n"
+      "$ type \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Break and Enter Residential/Other\", \"Break and Enter Residential…\n",
+      "$ year \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2013, 2013, 2013, 2016, 2013, 2015, 2016, 2016, 2016, 2013, 2015,…\n",
+      "Rows: 1,304\n",
+      "Columns: 2\n",
+      "$ type \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Offence Against a Person\", \"Offence Against a Person\", \"Offence …\n",
+      "$ year \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2014, 2016, 2012, 2015, 2012, 2015, 2015, 2014, 2015, 2016, 2012,…\n"
      ]
     }
    ],
    "source": [
-    "# Select only the desired years (2012-2016) and the desired columns (type of crime and year)\n",
+    "# Filtered data to only the desired years (2012-2016) with only these two columns selected\n",
     "grandview_woodland_clean <- grandview_woodland_clean |>\n",
     "    filter(year == 2012 | year == 2013 | year == 2014 | year == 2015 | year == 2016) |>\n",
     "    select(type, year)\n",
     "\n",
+    "# Split data into two sub datasets for the two crime types (Break and Enter Residential/Other)\n",
+    "grandview_woodland_break <- grandview_woodland_clean |>\n",
+    "    filter(type == \"Break and Enter Residential/Other\")\n",
+    "\n",
     "# View the filtered and selected dataframe.\n",
-    "glimpse(grandview_woodland_clean)"
+    "glimpse(grandview_woodland_break)\n",
+    "\n",
+    "# Split data into two sub datasets for the two crime types (Offence Against a Person)\n",
+    "grandview_woodland_offence <- grandview_woodland_clean |>\n",
+    "    filter(type == \"Offence Against a Person\")\n",
+    "\n",
+    "# View the filtered and selected dataframe.\n",
+    "glimpse(grandview_woodland_offence)"
    ]
   },
   {
@@ -270,12 +285,12 @@
    "id": "c4833f57-eaf5-4edf-aba3-63df4c19bd54",
    "metadata": {},
    "source": [
-    "Figure 2.1.3: The complete Grandview Woodland dataset with the correct column filtered and selected."
+    "Figure 2.1.3: The two sub-dataset of Grandview Woodland dataset with the correct column filtered and selected."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "1ffd2f1b-b882-48d4-9f37-c700fd7cd3f0",
    "metadata": {},
    "outputs": [
@@ -283,21 +298,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rows: 2,093\n",
+      "Rows: 574\n",
       "Columns: 2\n",
-      "$ type \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Break and Enter Commercial\", \"Break and Enter Commercial\", \"Brea…\n",
-      "$ year \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2014, 2016, 2013, 2013, 2014, 2014, 2012, 2013, 2015, 2015, 2014,…\n"
+      "$ type \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Break and Enter Residential/Other\", \"Break and Enter Residential…\n",
+      "$ year \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2016, 2016, 2013, 2015, 2015, 2013, 2012, 2013, 2014, 2012, 2015,…\n",
+      "Rows: 84\n",
+      "Columns: 2\n",
+      "$ type \u001b[3m\u001b[90m<chr>\u001b[39m\u001b[23m \"Offence Against a Person\", \"Offence Against a Person\", \"Offence …\n",
+      "$ year \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 2012, 2013, 2013, 2015, 2012, 2013, 2015, 2012, 2014, 2016, 2015,…\n"
      ]
     }
    ],
    "source": [
-    "# Select only the desired years (2012-2016) and the desired columns (type of crime and year)\n",
+    "# Filtered data to only the desired years (2012-2016) with only these two columns selected\n",
     "shaughnessy_clean <- shaughnessy_clean |>\n",
     "    filter(year == 2012 | year == 2013 | year == 2014 | year == 2015 | year == 2016) |>\n",
     "    select(type, year)\n",
     "\n",
+    "# Split data into two sub datasets for the two crime types (Break and Enter Residential/Other)\n",
+    "shaughnessy_break <- shaughnessy_clean |>\n",
+    "    filter(type == \"Break and Enter Residential/Other\")\n",
+    "\n",
     "# View the filtered and selected dataframe.\n",
-    "glimpse(shaughnessy_clean)"
+    "glimpse(shaughnessy_break)\n",
+    "\n",
+    "# Split data into two sub datasets for the two crime types (Offence Against a Person)\n",
+    "shaughnessy_offense <- shaughnessy_clean |>\n",
+    "    filter(type == \"Offence Against a Person\")\n",
+    "\n",
+    "# View the filtered and selected dataframe.\n",
+    "glimpse(shaughnessy_offense)"
    ]
   },
   {
@@ -305,15 +335,7 @@
    "id": "a02a3fd1-427a-47cc-ae51-d1ccbcd9516c",
    "metadata": {},
    "source": [
-    "Figure 2.1.4: The complete Shaughnessy dataset with the correct column filtered and selected."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4c2258b0-12ba-4578-9046-e290762e614a",
-   "metadata": {},
-   "source": [
-    "From the two cleaned datasets, we obtained that Grandview Woodland has a total of 10,900 crimes in the year of 2012 to 2016 while Shaughnessy has a total of 2,093 crimes in the year of 2012 to 2016. "
+    "Figure 2.1.4: The two sub-dataset of Shaughnessy dataset with the correct column filtered and selected."
    ]
   },
   {
@@ -334,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "98f94e64-56b5-46d6-9050-81874833bb40",
    "metadata": {},
    "outputs": [
