Finished Introduction and References

--- a/crime_rate.ipynb
+++ b/crime_rate.ipynb
@@ -5,7 +5,23 @@
    "id": "ce14aa8c-fdfc-4530-b332-4c2b73577e65",
    "metadata": {},
    "source": [
-    "## Crime Rate ___ (Group 23)"
+    "# Crime Rate and Economic Inequality (Group 23)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0feecb82-e763-49b7-be9a-bee8b9a11168",
+   "metadata": {},
+   "source": [
+    "## STAT 201 Group 23 Project Proposal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b413fbc9-a5dd-49e8-a5e0-cf3c1f671e8a",
+   "metadata": {},
+   "source": [
+    "Crystal Zhao, Yuhei Arimoto, Tony Lee, Qiantong Huang"
    ]
   },
   {
@@ -13,32 +29,30 @@
    "id": "d06881f2-74c7-4a99-9365-3b07d86fc2dd",
    "metadata": {},
    "source": [
-    "#### Part 1: Introduction"
+    "## Part 1: Introduction"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ada9ba40-a2af-4fab-b1af-56a3d4a7819b",
+   "cell_type": "markdown",
+   "id": "aa0de25c-1e34-4fe4-a3ee-b4824a4f58ec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Crime is a complex issue with various contributing factors. Poverty, economic inequality, and social conflicts such as political exclusion and relative deprivation are some of the identified factors that can lead to the occurrence of crime (Norrie, 2014). Numerous studies have shown a correlation between poverty and crime rates, highlighting the significance of economic inequality as a factor influencing crime rates (Sugiharti et al., 2023; Zhang, 2013).\n",
+    "\n",
+    "To expand our understanding of the relationship between crime rates and economic inequality, this project aims to explore the correlation between specific types of crime and economic inequality. We will analyze crime data from the Vancouver Police Department on two Vancouver neighborhoods, Grandview-Woodland and Shaughnessy, to answer two questions: \n",
+    "* Is the crime rate of Break and Enter Residential/Other type of crime higher in a wealthy neighborhood than in a poor neighborhood?\n",
+    "* Is the crime rate of Offence typo crime lower in a wealthy neighborhood than in a poor neighborhood?\n",
+    "\n",
+    "Grandview-Woodland, with a low median household income, will be classified as a poor neighborhood, while Shaughnessy, with a high median household income, will be classified as a wealthy neighborhood (\"Grandview-Woodland\", 2020; \"Shaughnessy\", 2020). The dataset includes information on the type, date, and location of all crimes reported in these two neighborhoods, and population values of 8430 and 29175 (\"Grandview-Woodland\", 2020; \"Shaughnessy\", 2020), respectively, will be used to calculate crime rates. Crime rate (location parameter) and standard deviation (scale parameter) will be used as response variables in our analysis.\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "64082d4f-c550-40e0-b936-63366544a8f3",
    "metadata": {},
    "source": [
-    "#### Part 2: Methods & Results"
+    "## Part 2: Methods & Results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cae20425-f027-41b9-a688-3e54e05076f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -430,6 +444,62 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80e247e5-ebbc-4fb9-a2b9-2d267c9ffc39",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa2edd8e-3c8d-4743-aced-cb8ed61317c8",
+   "metadata": {},
+   "source": [
+    "Grandview-Woodland Neighborhood Social Indicators Profile 2020. City of Vancouver. (2020). Retrieved March 19, 2023, from https://vancouver.ca/files/cov/social-indicators-profile-grandview-woodland.pdf "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceec3bb1-b963-47ca-86f7-e87a14fc60e0",
+   "metadata": {},
+   "source": [
+    "Norrie, A. W., & Cambridge Core EBA eBooks Complete Collection. (2014). Crime, reason and history: A critical introduction to criminal law (Third ed.). Cambridge University Press. https://doi.org/10.1017/CBO9781139031851"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40ab409b-655a-44e5-98a8-76626722d5a1",
+   "metadata": {},
+   "source": [
+    "Shaughnessy Neighborhood Social Indicators Profile 2020. City of Vancouver. (2020). https://vancouver.ca/files/cov/social-indicators-profile-shaughnessy.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e606f772-2222-4053-8baf-590b0afe5c40",
+   "metadata": {},
+   "source": [
+    "Sugiharti, L., Purwono, R., Esquivias, M. A., &amp; Rohmawati, H. (2023). The nexus between crime rates, poverty, and income inequality: A case study of indonesia. Economies, 11(2), 62. https://doi.org/10.3390/economies11020062 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bdbb096-5502-4354-a8b7-3d9ded6eea83",
+   "metadata": {},
+   "source": [
+    "The Vancouver Police Department. Crime Data [Data set]. https://geodash.vpd.ca/opendata/#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c109fc4e-eaf6-4f1f-8744-07a8e4cf860f",
+   "metadata": {},
+   "source": [
+    "Zhang, W. (2013). The relationships between crime rate and income inequality: Evidence from China. The University of Texas at Austin. https://doi.org/https://repositories.lib.utexas.edu/handle/2152/22551 "
+   ]
   }
  ],
  "metadata": {
