--- a/crime_rate.ipynb
+++ b/crime_rate.ipynb
@@ -51,7 +51,7 @@
    "id": "64082d4f-c550-40e0-b936-63366544a8f3",
    "metadata": {},
    "source": [
-    "## Part 2: Methods & Results"
+    "## Part 2: Preliminary Results"
    ]
   },
   {
@@ -443,6 +443,20 @@
    "id": "f911a746-ace4-4c97-8034-b7d8d45bbacf",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e4833e4-7767-4a48-b20f-5f9fdc6d27ba",
+   "metadata": {},
+   "source": [
+    "## Part 3: Methods & Plan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31aeddcf-011b-4dfd-915d-1500fc56937e",
+   "metadata": {},
    "source": []
   },
   {
