Completed project proposal

--- a/crime_rate.ipynb
+++ b/crime_rate.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "To expand our understanding of the relationship between crime rates and economic inequality, this project aims to explore the correlation between specific types of crime and economic inequality. We will analyze crime data from the Vancouver Police Department on two Vancouver neighborhoods, Grandview-Woodland and Shaughnessy, to answer two questions: \n",
     "* Is the crime rate of Break and Enter Residential/Other type of crime higher in a wealthy neighborhood than in a poor neighborhood?\n",
-    "* Is the crime rate of Offence typo crime lower in a wealthy neighborhood than in a poor neighborhood?\n",
+    "* Is the crime rate of Offence typo of crime lower in a wealthy neighborhood than in a poor neighborhood?\n",
     "\n",
     "Grandview-Woodland, with a low median household income, will be classified as a poor neighborhood, while Shaughnessy, with a high median household income, will be classified as a wealthy neighborhood (\"Grandview-Woodland\", 2020; \"Shaughnessy\", 2020). The dataset includes information on the type, date, and location of all crimes reported in these two neighborhoods, and population values of 8430 for Shaughnessy and 29175 for Grandview-Woodland (\"Grandview-Woodland\", 2020; \"Shaughnessy\", 2020) will be used to calculate crime rates. Crime rate (location parameter) and standard deviation (scale parameter) will be used as response variables in our analysis.\n"
    ]
@@ -3168,7 +3168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "id": "11166b28-433c-427a-aceb-549418aec89f",
    "metadata": {},
    "outputs": [
@@ -3254,7 +3254,13 @@
    "cell_type": "markdown",
    "id": "31aeddcf-011b-4dfd-915d-1500fc56937e",
    "metadata": {},
-   "source": []
+   "source": [
+    "Figure 2.1.5 suggests that the correlation between the crime rate and economic inequality might depend on the type of crime, and it also gives potential answers to our two questions that the crime rate of Break and Enter Residential/Other type of crime is higher in a wealthy neighborhood than in a poor neighborhood, and the crime rate of Offence typo crime is lower in a wealthy neighborhood than in a poor neighborhood. However, it is not enough to conclude them as they are just estimates of the crime rate based on data collected in the span of 5 years between 2012 and 2016. In order to address this gap, we will use bootstrapping to find a 95% confidence interval of the crime rate of each type of crime in each neighborhood. Furthermore, we will conduct hypothesis tests with permutation to answer two questions. To answer the first question, the alternative hypothesis will be “the crime rate of Break and Enter Residential/Other type of crime is higher in Shaughnessy than in Grandview-Woodland”. For the second question, the alternative hypothesis will be “the crime rate of Offence type of crime is lower in Shaughnessy than in Grandview-Woodland”. The null hypothesis will be “The crime rate is the same in two neighborhoods” for both questions.\n",
+    "\n",
+    "Through bootstrapping and hypothesis tests, we expect to find that the crime rate of \"Break and Enter Residential/Other\" would be higher and \"Offence against a person\" would be lower in Shaughnessy than in Grandview Woodland. Therefore, the crime rate depends on the type of crime and neighborhoods, and neighborhoods with different income levels have different crime patterns. Based on this, we can provide recommendations for security measures tailored to each neighborhood. Residents and businesses in affluent neighborhoods like Shaughnessy should invest in security measures to prevent \"Break and Enter Residential\" crimes. In contrast, those in lower-income neighborhoods like Grandview-Woodland should focus on measures to prevent \"Offence-related\" crimes. \n",
+    "\n",
+    "This project can lead to future questions of if there are any other factors that affect the crime rate and on the effectiveness of existing security measures in each area at preventing crimes. "
+   ]
   },
   {
    "cell_type": "markdown",
