Final Report file added

--- a/crime_rate_final_report.ipynb
+++ b/crime_rate_final_report.ipynb
@@ -13,7 +13,7 @@
    "id": "0feecb82-e763-49b7-be9a-bee8b9a11168",
    "metadata": {},
    "source": [
-    "## STAT 201 Group 23 Project Proposal"
+    "## STAT 201 Group 23 Final Report"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "71a22c65-50f1-493a-b364-7c3970b42e53",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
    ],
    "source": [
     "# load Grandview Woodland crime rate dataset from database\n",
-    "grandview_woodland_data <- read_csv(\"crimedata_csv_Grandview-Woodland_AllYears.csv\", col_names = TRUE)\n",
+    "grandview_woodland_data <- read_csv(\"https://raw.githubusercontent.com/yuheiarimoto616/stat201-group-32/main/crimedata_csv_Grandview-Woodland_AllYears.csv\", col_names = TRUE)\n",
     "names(grandview_woodland_data) <- tolower(names(grandview_woodland_data))\n",
     "\n",
     "#Get rid of any rows with NA\n",
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f53d9f88-134b-4836-9239-ea65427b0ae9",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
    ],
    "source": [
     "# load Shaughnessy crime rate dataset from database\n",
-    "shaughnessy_data <- read_csv(\"crimedata_csv_Shaughnessy_AllYears.csv\", col_names = TRUE)\n",
+    "shaughnessy_data <- read_csv(\"https://raw.githubusercontent.com/yuheiarimoto616/stat201-group-32/main/crimedata_csv_Shaughnessy_AllYears.csv\", col_names = TRUE)\n",
     "names(shaughnessy_data) <- tolower(names(shaughnessy_data))\n",
     "\n",
     "#Get rid of any rows with NA\n",
@@ -3813,6 +3813,22 @@
     "\n",
     "This project can lead to future questions of if there are any other factors that affect the crime rate and on the effectiveness of existing security measures in each area at preventing crimes. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f537dbef-f736-43eb-ad15-ec6b9e8feb69",
+   "metadata": {},
+   "source": [
+    "## Part 3: Discussion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28dbba5f-c9f5-41d6-9f66-8743f4d0f435",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
