--- a/crime_rate_final_report.ipynb
+++ b/crime_rate_final_report.ipynb
@@ -8234,9 +8234,46 @@
    "id": "4c00b6ca-f2f7-4e2a-ad82-884e1d447afc",
    "metadata": {},
    "source": [
-    "Based on this, we can expect a crime pattern in a neighborhood based on income level and provide security measures tailored to each neighborhood to prevent crime more effectively.\n",
+    "#### \"Break and Enter Residential/Other\":\n",
     "\n",
-    "This project can lead to future questions of if there are any other factors that affect the crime rate and on the effectiveness of existing security measures in each area at preventing crimes."
+    "##### Confidence Interval\n",
+    "\n",
+    "\n",
+    "\n",
+    "##### Hypothesis Test\n",
+    "\n",
+    "- The null hypothesis: The \"Break and Enter Residential/Other\" crime rate is the same in both neighbohoods.\n",
+    "\n",
+    "- The alternative hypothesis: The \"Break and Enter Residential/Other\" crime rate is higher in Shaughnessy than in Grandview-Woodland\n",
+    "\n",
+    "According to the findings presented in Figure 2.3.3, a p-value of 0 has been calculated, indicating that it is lower than all levels of  significance. As a result, we are inclined to reject the null hypothesis and are in risk of comitting Type I error. This supoorts the conclusion that the \"Break and Enter Residential/Other\" crime rate is higher in Shaughnessy than in Grandview-Woodland. .\n",
+    "\n",
+    "#### \"Offence against a person\":\n",
+    "\n",
+    "##### Confidence Interval\n",
+    "\n",
+    "\n",
+    "\n",
+    "##### Hypothesis Test\n",
+    "\n",
+    "- The null hypothesis: The \"Offence against a person\" crime rate is the same in both neighbohoods.\n",
+    "\n",
+    "- The alternative hypothesis: The \"Offence against a person\" crime rate is lower in Shaughnessy than in Grandview-Woodland\n",
+    "\n",
+    "\n",
+    "According to the findings presented in Figure 2.3.7, a p-value of 0 has been calculated, indicating that it is lower than all levels of  significance. As a result, we are inclined to reject the null hypothesis and are in risk of comitting Type I error. This supoorts the conclusion that the rate of \"Offence against a person\" crime is lower in Shaughnessy as compared to Grandview-Woodland.\n",
+    "\n",
+    "Based on these results and the analysis, it is possible to discern crime pattern in different neighborhoods based on income levels and provide security measures tailored to each neighborhood to prevent crime more effectively. Specifically, offenses against a person is more likely to occur in a poor neighborhood and break, where factors such as limited access to education, economic disadvantage, higher drug usage, and a lack of social services may contribute to higher crime rates. On the other hand, break-ins and residential burglaries are more likely to occur in wealthy neighborhoods due to the presence of high-value homes, better infrastructure with fewer physical barriers, and lower overall crime rates in the area, which may lead to a false sense of security. In conclusion, the findings are consistent with our expectations.\n",
+    "\n",
+    "This raises some ongoing questions:\n",
+    "\n",
+    "1. What are some other factors that affect the crime rate besides solely analysing on the locations?\n",
+    "\n",
+    "Since we are aware that location is one of the factors but might not be the most significant factors that influences the crime rates. We are interested in knowing what are some other possible factors and some possible related analysis that can be extended from the location factor.\n",
+    "\n",
+    "2. If there are any other factors that affect the effectiveneess of existing security measures in each area at preventing crimes? \n",
+    "\n",
+    "3. What are some specific security measure that can be implemeneted in neighborhoods to decrease crime rates, specifically targeting different type of crimes?"
    ]
   },
   {
