--- a/crime_rate_final_report.ipynb
+++ b/crime_rate_final_report.ipynb
@@ -7390,8 +7390,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db4c9274-4ba7-4712-91bb-d5005a7cbde7",
+   "metadata": {},
+   "source": [
+    "We are now going to perform the hypothesis test with asymptotic method."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 137,
    "id": "f6b92b1f-7157-4fa2-bf9a-5e106fd70e9d",
    "metadata": {},
    "outputs": [
@@ -7455,6 +7463,14 @@
    "metadata": {},
    "source": [
     "Figure 2.3.4: Test statistics for the hypothesis test involving 'Break and Enter Residential/Other'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edec71e9-53e5-4000-8b64-ff0503a5941d",
+   "metadata": {},
+   "source": [
+    "As the bootstrapping method gave p-value of 0, and the asymptotic method gave p-value nearly zero, we reject the null hypothesis with the significance level of 0.05, and conclude that the crime rate of Break and Enter Residential/Other type of crime tends to be higher in Shaughnessy than in Grandview-Woodland."
    ]
   },
   {
@@ -8169,6 +8185,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41edc9ef-c495-4166-8b62-8ae6d7d6c432",
+   "metadata": {},
+   "source": [
+    "We are now going to perform the hypothesis test with asymptotic method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 133,
    "id": "4c09598e-aa1e-4fda-9a0e-6850f3d15b6a",
@@ -8234,6 +8258,14 @@
    "metadata": {},
    "source": [
     "Figure 2.3.8: Test statistics for the hypothesis test involving 'Offence Against a Person'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "047e310a-061f-4a8b-9f0b-66f2d5cc7312",
+   "metadata": {},
+   "source": [
+    "As the bootstrapping method gave p-value of 0, and the asymptotic method gave p-value nearly zero, we reject the null hypothesis with the significance level of 0.05, and conclude that the \"Offence Against a Person\" crime rate tends to be lower in Shaughnessy than in Grandview-Woodland."
    ]
   },
   {
